[package]
name = "sobol"
version = "0.1.0"
authors = ["Weston Siegenthaler <westons@gmail.com>"]
license = "BSD-3-Clause"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/wsiegenthaler/sobol-rs"
repository = "https://github.com/wsiegenthaler/sobol-rs"
documentation = "https://docs.rs/sobol-rs"
description = "A Sobol sequence generator for Rust"
categories = ["algorithms","science","simulation"]
keywords = ["sobol","low-discrepancy","mcmc","monte-carlo","quasi-random"]
exclude = ["/tests","/benches","/examples","/.github"]

[dependencies]
libflate = "0.1"
num-traits = "0.2"

[dev-dependencies]
lazy_static = "1.4"

[badges]
coveralls = { repository = "wsiegenthaler/sobol-rs", branch = "master", service = "github" }
